--- a/index.html
+++ b/index.html
@@ -98,11 +98,13 @@
                 Multiply that by 50 services with 5 different environments and you have a mess.<br>
             </p>
 
-            <a href="https://www.meetup.com/ru-RU/Software-Circus/events/270040128/">
-                <h3>Join online meetup about Microconfig, April 22</h3>
-                <img src="https://secure.meetupstatic.com/photos/event/c/5/d/3/highres_490130643.jpeg"
-                     alt="online meetup" style="width: 500px"/>
-            </a>
+            <p class="lead" style="margin-top: 2em">
+                <a href="https://www.meetup.com/ru-RU/Software-Circus/events/270040128/">
+                    <img src="https://www.meetup.com/mu_static/ru-RU/logo--script.004ada05.svg"
+                         alt="online meetup" style="width: 100px"/>
+                    <span style="font-weight: bold; padding-left: 10px">Microconfig online presentation, join us April 22</span>
+                </a>
+            </p>
         </div>
     </section>
 
