--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
                 Multiply that by 50 services with 5 different environments and you have a mess.<br>
             </p>
 
-            <p class="lead" style="margin-top: 2em">
-                <a href="https://www.meetup.com/ru-RU/Software-Circus/events/270040128/">
-                    <img src="https://www.meetup.com/mu_static/ru-RU/logo--script.004ada05.svg"
+            <p class="lead" style="margin-top: 2em; text-align: center;">
+                <a href="https://www.meetup.com/Software-Circus/events/270040128/">
+                    <img src="https://www.meetup.com/mu_static/en-US/logo--script.004ada05.svg"
                          alt="online meetup" style="width: 100px"/>
-                    <span style="font-weight: bold; padding-left: 10px">Microconfig online presentation, join us April 22</span>
+                    <span style="font-weight: bold; padding-left: 10px; color: #02afdd">Microconfig Online presentation, join us April 22</span>
                 </a>
             </p>
         </div>
