meetup invitation update (time)

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <a href="https://www.meetup.com/Software-Circus/events/270040128/">
                     <img src="https://www.meetup.com/mu_static/en-US/logo--script.004ada05.svg"
                          alt="online meetup" style="width: 100px"/>
-                    <span style="font-family: 'Blogger Sans'; font-weight: bold; padding-left: 10px; color: #02afdd">Microconfig Online presentation, join us April 22</span>
+                    <span style="font-family: 'Blogger Sans'; font-weight: bold; padding-left: 10px; color: #02afdd">Microconfig online presentation, join us April 22 18:00 CET</span>
                 </a>
             </p>
         </div>
