meetup invitation update (removed center text)

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 Multiply that by 50 services with 5 different environments and you have a mess.<br>
             </p>
 
-            <p class="lead" style="margin-top: 2em; text-align: center;">
+            <p class="lead" style="margin-top: 2em;">
                 <a href="https://www.meetup.com/Software-Circus/events/270040128/">
                     <img src="https://www.meetup.com/mu_static/en-US/logo--script.004ada05.svg"
                          alt="online meetup" style="width: 100px"/>
