meetup invitation update (text edit)

--- a/index.html
+++ b/index.html
@@ -97,13 +97,14 @@
                 Each service has an application config, deployment config, a log template and so on.<br>
                 Multiply that by 50 services with 5 different environments and you have a mess.<br>
             </p>
-
             <p class="lead" style="margin-top: 2em;">
+            <div>
+                <img src="https://www.meetup.com/mu_static/en-US/logo--script.004ada05.svg"
+                     alt="online meetup" style="width: 150px"/>
                 <a href="https://www.meetup.com/Software-Circus/events/270040128/">
-                    <img src="https://www.meetup.com/mu_static/en-US/logo--script.004ada05.svg"
-                         alt="online meetup" style="width: 100px"/>
-                    <span style="font-family: 'Blogger Sans'; font-weight: bold; padding-left: 10px; color: #02afdd">Online, join us April 22</span>
+                    <span style="font-family: 'Blogger Sans'; border: 2px solid #02afdd; border-radius: 5px; font-weight: bold;font-size: 20px;margin-left: 5px; padding: 15px; color: #02afdd">Join us online April 22</span>
                 </a>
+            </div>
             </p>
         </div>
     </section>
