Changed menu, logo and moved contacts to footer

--- a/documentation.html
+++ b/documentation.html
@@ -28,10 +28,6 @@
     <link rel="stylesheet" href="//unpkg.com/docsify/themes/vue.css">
 
     <style>
-        .app-name-link img {
-            width: 90px;
-        }
-
         body {
             font-size: 1.25rem;
             font-weight: 300;
@@ -61,7 +57,7 @@
         homepage: 'https://raw.githubusercontent.com/microconfig/microconfig/master/README.md',
         repo: 'https://github.com/microconfig/microconfig',
         noEmoji: true,
-        logo: './logo.svg',
+        logo: './images/microconfig_logo_horizontal.svg',
         nameLink: "https://microconfig.io",
     }
 </script>
