--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
             <nav class="my-2 my-md-0 mr-md-3">
                 <!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
-                <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="documentation.html">Docs</a>
-                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
+                <a class="p-2" href="download.html">Download</a>
+                <a class="p-2" href="documentation.html">Docs</a>
+                <a class="p-2" href="plugin.html">IDEA plugin</a>
             </nav>
         </div>
     </div>
 </header>
-
+<!--
 <a href="https://github.com/microconfig/microconfig" class="github-corner" aria-label="View source on GitHub">
     <svg width="80" height="80" viewBox="0 0 250 250"
          style="fill:#5fbb92; color:#fff; position: fixed; top: 0; border: 0; right: 0;z-index: 100"
@@ -57,29 +57,88 @@
         <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
               fill="currentColor" class="octo-body"></path>
     </svg>
-</a>
+</a>-->
 
 <main role="main" id="quickstart">
-    <section class="jumbotron">
-        <div class="container">
-            <h1>Remove copy&paste and
-                <br><span style="font-weight: bold;">focus on things that matter</span>
-            </h1>
-            <p class="lead" style="margin-top: 2em">
-                Microservice architecture implies a lot of services with similar configuration.<br>
-                Each service has an application config, deployment config, a log template and so on.<br>
-                Multiply that by 50 services with 5 different environments and you have a mess.<br>
+<!--    <section class="jumbotron">-->
+<!--        <div class="container">-->
+<!--            <h1>Remove copy&paste and-->
+<!--                <br><span style="font-weight: bold;">focus on things that matter</span>-->
+<!--            </h1>-->
+<!--            <p class="lead" style="margin-top: 2em">-->
+<!--                Microservice architecture implies a lot of services with similar configuration.<br>-->
+<!--                Each service has an application config, deployment config, a log template and so on.<br>-->
+<!--                Multiply that by 50 services with 5 different environments and you have a mess.<br>-->
+<!--            </p>-->
+<!--        </div>-->
+<!--    </section>-->
+
+    <section class="banner d-flex">
+        <div class="gear">
+            <p>
+                <svg width="205" version="1.1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 113.4 113.4"
+                     style="enable-background:new 0 0 113.4 113.4;" xml:space="preserve" fill="url(#gradient)">
+                    <linearGradient id="gradient" gradientTransform="rotate(0)">
+                        <stop class="main-stop" offset="0%" />
+                        <stop class="alt-stop" offset="100%" />
+                    </linearGradient>
+                    <path class="st0" d="M105.8,85.1c-0.5,0.9-1.4,1.4-2.3,1.4c-0.5,0-0.9-0.1-1.3-0.4c-1.3-0.7-1.7-2.4-1-3.7
+	c11.6-20.1,8.2-45.5-8.2-61.9S51.1,0.7,31,12.3c-1.3,0.7-2.9,0.3-3.7-1c-0.7-1.3-0.3-2.9,1-3.7c22.2-12.8,50.3-9.1,68.4,9
+	C114.9,34.7,118.6,62.9,105.8,85.1z M82.4,101.1c-20.1,11.6-45.5,8.2-61.9-8.2C4,76.6,0.7,51.1,12.3,31c0.7-1.3,0.3-2.9-1-3.7
+	c-1.3-0.7-2.9-0.3-3.7,1c-12.8,22.2-9.1,50.3,9,68.4c10.9,10.9,25.5,16.6,40.1,16.6c9.7,0,19.5-2.5,28.3-7.6c1.3-0.7,1.7-2.4,1-3.7
+	C85.3,100.8,83.6,100.4,82.4,101.1z M17.6,46.1c1.8-6.8,5.3-13,10.4-18c5.1-5.1,11.3-8.6,18-10.4c0,0,0.1,0,0.1-0.1
+	c0.1,0,0.1,0,0.2,0c3.3-0.9,6.8-1.4,10.3-1.4c3.5,0,7,0.5,10.3,1.4c0.1,0,0.1,0,0.2,0c0,0,0.1,0,0.1,0.1c6.8,1.8,13,5.3,18,10.4
+	c5.1,5.1,8.6,11.3,10.4,18c0,0,0,0.1,0.1,0.1c0,0.1,0,0.1,0,0.2c0.9,3.3,1.4,6.8,1.4,10.3c0,3.5-0.5,7-1.4,10.3c0,0,0,0.1,0,0.1
+	c0,0,0,0.1-0.1,0.1c-1.8,6.7-5.3,12.9-10.4,18c-5.1,5.1-11.3,8.6-18,10.4c0,0-0.1,0-0.1,0.1c-0.1,0-0.2,0-0.2,0
+	c-3.3,0.9-6.7,1.3-10.2,1.3s-6.9-0.5-10.2-1.3c-0.1,0-0.2,0-0.2,0c0,0-0.1,0-0.1-0.1c-6.8-1.8-13-5.3-18-10.4
+	c-5.1-5.1-8.6-11.3-10.4-18c0,0,0-0.1-0.1-0.1c0-0.1,0-0.1,0-0.1c-0.9-3.3-1.4-6.8-1.4-10.3c0-3.5,0.5-7,1.4-10.3c0-0.1,0-0.1,0-0.2
+	C17.6,46.2,17.6,46.1,17.6,46.1z M56.7,21.6c-2.2,0-4.3,0.2-6.4,0.6l0.7,2.5c0.4,1.4-0.5,2.9-1.9,3.3c-0.2,0.1-0.5,0.1-0.7,0.1
+	c-1.2,0-2.3-0.8-2.6-2L45,23.6c-4.1,1.4-7.8,3.6-11.2,6.4l1.8,1.8c1.1,1.1,1.1,2.8,0,3.8c-0.5,0.5-1.2,0.8-1.9,0.8s-1.4-0.3-1.9-0.8
+	l-1.8-1.8c-2.9,3.3-5,7.1-6.4,11.2l2.5,0.7c1.4,0.4,2.3,1.9,1.9,3.3c-0.3,1.2-1.4,2-2.6,2c-0.2,0-0.5,0-0.7-0.1l-2.5-0.7
+	c-0.4,2.1-0.6,4.3-0.6,6.4c0,2.2,0.2,4.3,0.6,6.4l2.5-0.7c1.5-0.4,2.9,0.5,3.3,1.9c0.4,1.4-0.5,2.9-1.9,3.3l-2.5,0.7
+	c1.4,4.1,3.6,7.8,6.4,11.2l1.8-1.8c1.1-1.1,2.8-1.1,3.8,0c1.1,1.1,1.1,2.8,0,3.8l-1.8,1.8c3.3,2.9,7.1,5,11.2,6.4l0.7-2.5
+	c0.4-1.4,1.9-2.3,3.3-1.9c1.4,0.4,2.3,1.9,1.9,3.3l-0.7,2.5c2.1,0.4,4.3,0.6,6.4,0.6c2.2,0,4.3-0.2,6.4-0.6l-0.7-2.5
+	c-0.4-1.4,0.5-2.9,1.9-3.3c1.4-0.4,2.9,0.5,3.3,1.9l0.7,2.5c4.1-1.4,7.8-3.6,11.2-6.4l-1.8-1.8c-1.1-1.1-1.1-2.8,0-3.8
+	c1.1-1.1,2.8-1.1,3.8,0l1.8,1.8c2.9-3.3,5-7.1,6.4-11.2l-2.5-0.7c-1.4-0.4-2.3-1.9-1.9-3.3c0.4-1.4,1.9-2.3,3.3-1.9l2.5,0.7
+	c0.4-2.1,0.6-4.3,0.6-6.4c0-2.2-0.2-4.3-0.6-6.4l-2.5,0.7C88.5,51,88.2,51,88,51c-1.2,0-2.3-0.8-2.6-2c-0.4-1.4,0.5-2.9,1.9-3.3
+	l2.5-0.7c-1.4-4.1-3.6-7.8-6.4-11.2l-1.8,1.8c-0.5,0.5-1.2,0.8-1.9,0.8c-0.7,0-1.4-0.3-1.9-0.8c-1.1-1.1-1.1-2.8,0-3.8l1.8-1.8
+	c-3.3-2.9-7.1-5-11.2-6.4l-0.7,2.5c-0.3,1.2-1.4,2-2.6,2c-0.2,0-0.5,0-0.7-0.1c-1.4-0.4-2.3-1.9-1.9-3.3l0.7-2.5
+	C61,21.8,58.9,21.6,56.7,21.6z M43.3,43.3c3.6-3.6,8.3-5.5,13.4-5.5c5,0,9.8,2,13.4,5.5c7.4,7.4,7.4,19.4,0,26.7
+	c-3.7,3.7-8.5,5.5-13.4,5.5c-4.8,0-9.7-1.8-13.4-5.5c-3.6-3.6-5.5-8.3-5.5-13.4C37.8,51.7,39.8,46.9,43.3,43.3z M47.2,47.2
+	c-2.6,2.5-4,5.9-4,9.5c0,3.6,1.4,7,4,9.5c5.3,5.3,13.8,5.3,19.1,0s5.3-13.8,0-19.1c-2.5-2.6-5.9-4-9.5-4
+	C53.1,43.2,49.7,44.6,47.2,47.2z M56.8,59.4c1.5,0,2.7-1.2,2.7-2.7S58.3,54,56.8,54h0c-1.5,0-2.7,1.2-2.7,2.7S55.3,59.4,56.8,59.4z
+	 M95,92.2L95,92.2c-1.5,0-2.7,1.2-2.7,2.7s1.2,2.7,2.7,2.7c1.5,0,2.7-1.2,2.7-2.7S96.4,92.2,95,92.2z M18.6,21.2
+	c1.5,0,2.7-1.2,2.7-2.7c0-1.5-1.2-2.7-2.7-2.7h0c-1.5,0-2.7,1.2-2.7,2.7C15.9,20,17.1,21.2,18.6,21.2z"/>
+                </svg>
+            </p>
+        </div>
+        <div class="header-banner">
+            <h1>Microservice Configuration Made Easy</h1>
+            <p class="lead mb-2">
+                Configure multiple services on different environments <span class="text-uppercase">without copy&paste</span>.
+            </p>
+
+            <p class="lead mb-2">
+                Extract and reuse common parts to focus on things that matter.
+            </p>
+
+            <p class="lead mb-2">
+                Use placeholders and powerful expression language for dynamic properties.
+            </p>
+
+            <p class="lead mb-2">
+                Supports yaml and properties formats.
             </p>
         </div>
     </section>
 
-    <div class="py-5 bg-light">
-        <div class="container" style="padding: 0; margin-bottom: 1.5rem">
-            <h2>
-                What Microconfig can offer
+    <section class="py-5">
+        <div class="container">
+            <h2 class="title text-center">
+                What Microconfig Can Do?
             </h2>
         </div>
-        <div class="container">
+        <div class="container possibilities">
             <div class="row">
                 <div class="col-md-6">
                     <div class="card mb-4">
@@ -97,7 +156,7 @@
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
-                            <h4 class="my-0 mc-color">
+                            <h4 class="my-0 mc-color bg-transparent">
                                 <a href="documentation.html#/?id=placeholders">${Place@holders}</a>
                             </h4>
                         </div>
@@ -106,17 +165,17 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-6">
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=expression-language">#{'Expression' + 'language'}</a>
+                                <a href="documentation.html#/?id=expression-language">#{Expression Language}</a>
                             </h4>
                         </div>
                         <div class="card-body">
                             If #include and ${placeholders} is not enough you can use powerful expression language for
                             dynamic properties
-                            <br><br>
                         </div>
                     </div>
                 </div>
@@ -124,8 +183,8 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=environment-specific-properties">Environment specific
-                                    configs</a>
+                                <a href="documentation.html#/?id=environment-specific-properties">Environment Specific
+                                    Configs</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -144,7 +203,6 @@
                         <div class="card-body">
                             Microconfig allows you to keep configuration files for any libraries in their specific
                             format and resolve placeholders inside them.
-                            <br><br>
                         </div>
                     </div>
                 </div>
@@ -152,20 +210,18 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=viewing-differences-between-config-versions">Config
-                                    diff</a>
+                                <a href="documentation.html#/?id=viewing-differences-between-config-versions">YAML & Properties Support</a>
                             </h4>
                         </div>
                         <div class="card-body">
                             Microconfig can detect added/removed/changed properties for each service and store this
                             information after every config build.
-                            <br><br>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 </main>
 
 <footer class="text-muted">
