Changed menu, logo and moved contacts to footer (#3)
* Changed menu, logo and moved contacts to footer

* Fixed resizing

* updated design

Co-authored-by: Alexandra <AlexandraSchetchikova@yandex.ru>
Co-authored-by: amatorin <Matorin.A.Aleks@sberbank.ru>

--- a/download.html
+++ b/download.html
@@ -49,17 +49,15 @@
 <header>
     <div class="navbar shadow-sm">
         <div class="container d-flex justify-content-between">
-            <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center" style="padding: 0">
-                <img src="logo.svg" style="width:80px" alt="Microconfig"/>
-                <strong class="mc-color" style="font-family: 'Blogger Sans'">Microconfig</strong>
+            <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center">
+                <img src="./images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
                 <!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
-                <a class="p-2 text-dark" href="documentation.html">Documentation</a>
-                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="contacts.html">Contacts</a>
+                <a class="p-2 text-dark" href="documentation.html">Docs</a>
+                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
             </nav>
         </div>
     </div>
@@ -104,11 +102,18 @@
 </main>
 
 <footer class="text-muted">
-    <div class="container" style="padding: 10px">
-        Microconfig.io © 2017-2020
+    <div class="container footer-container">
+        <p class="copyright">Microconfig.io © 2017-2020</p>
+
+        <div class="contacts">
+            <ul class="list-unstyled mb-0">
+                <li class="lead">Join our <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a></li>
+                <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
+                <li class="lead"><a href="mailto:support@microconfig.io">support@microconfig.io</a></li>
+            </ul>
+        </div>
     </div>
 </footer>
-
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
