--- a/index.html
+++ b/index.html
@@ -58,17 +58,15 @@
 <header>
     <div class="navbar shadow-sm">
         <div class="container d-flex justify-content-between">
-            <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center" style="padding: 0">
-                <img src="logo.svg" style="width:80px" alt="Microconfig"/>
-                <strong class="mc-color" style="font-family: 'Blogger Sans'">Microconfig</strong>
+            <a href="https://microconfig.io" class="navbar-brand d-flex align-items-center">
+                <img src="./images/microconfig_logo_horizontal.svg" alt="Microconfig"/>
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
                 <!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
-                <a class="p-2 text-dark" href="documentation.html">Documentation</a>
-                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="contacts.html">Contacts</a>
+                <a class="p-2 text-dark" href="documentation.html">Docs</a>
+                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
             </nav>
         </div>
     </div>
@@ -96,15 +94,6 @@
                 Microservice architecture implies a lot of services with similar configuration.<br>
                 Each service has an application config, deployment config, a log template and so on.<br>
                 Multiply that by 50 services with 5 different environments and you have a mess.<br>
-            </p>
-            <p class="lead" style="margin-top: 2em;">
-            <div>
-                <img src="https://www.meetup.com/mu_static/en-US/logo--script.004ada05.svg"
-                     alt="online meetup" style="width: 100px"/>
-                <a href="https://www.meetup.com/Software-Circus/events/270040128/">
-                    <span style="font-family: 'Blogger Sans'; border: 2px solid #02afdd; border-radius: 15px; font-weight: bold;font-size: 18px;margin-left: 5px; padding: 10px; color: #02afdd">Join us online April 22</span>
-                </a>
-            </div>
             </p>
         </div>
     </section>
@@ -205,8 +194,16 @@
 </main>
 
 <footer class="text-muted">
-    <div class="container" style="padding: 10px">
-        Microconfig.io © 2017-2020
+    <div class="container footer-container">
+        <p class="copyright">Microconfig.io © 2017-2020</p>
+
+        <div class="contacts">
+            <ul class="list-unstyled mb-0">
+                <li class="lead">Join our <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a></li>
+                <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
+                <li class="lead"><a href="mailto:support@microconfig.io">support@microconfig.io</a></li>
+            </ul>
+        </div>
     </div>
 </footer>
 
