--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta content="configuration management, external configuration, microservice configuration, configuration processor, configuration management tools"
+    <meta content="configuration management, external configuration, microservice configuration, configuration processor, configuration management tools, application configuration"
           name="keywords">
     <meta content="Microconfig - Microservice configuration made easy" name="description">
     <title>Microconfig.io - the best tool for microservice configuration management</title>
