--- a/index.html
+++ b/index.html
@@ -153,7 +153,8 @@
                             </h4>
                         </div>
                         <div class="card-body">
-                            You can use #{ 'expression' + 'language' } to generate your values. It supports math operations
+                            You can use #{ 'expression' + 'language' } to generate your values. It supports math
+                            operations
                             and much more.
                         </div>
                     </div>
@@ -222,8 +223,8 @@
 
         <div class="contacts">
             <ul class="list-unstyled mb-0">
-                <li class="lead">Join our <a
-                        href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
+                <li class="lead">Join our
+                    <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a>
                 </li>
                 <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
                 <li class="lead"><a href="mailto:support@microconfig.io">support@microconfig.io</a></li>
