Features Headline centered

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </section>
 
     <div class="py-5 bg-light">
-        <div class="container" style="padding: 0; margin-bottom: 1.5rem">
+        <div class="container" style="padding: 0; margin-bottom: 1.5rem; text-align: center;">
             <h2>
                 How Microconfig can help
             </h2>
