--- a/plugin.html
+++ b/plugin.html
@@ -84,47 +84,46 @@
                         <img alt="JetBrains IntelliJ plugins" src="https://img.shields.io/jetbrains/plugin/d/12064-microconfig-io?color=%235fbb92&style=flat-square">
                     </a>
                 </h1>
-                <p>IntelliJ IDEA plugin for Microconfig that allows navigating to #include and placeholders' sources,
-                    resolving placeholders and other useful stuff.</p>
+                <p>IntelliJ IDEA plugin for Microconfig that allows navigation to #include and ${placeholder} sources,
+                    preview individual placeholders or whole components and even build your configs.</p>
 
                 <h4>Plugin usage</h4>
-                <p>Plugin adds it's submenu in <code>Main Menu -&gt; Tools -&gt; Microconfig</code>. Also the same menu
-                    appears in <code>RightClick</code> menu.
+                <p>Plugin adds it's submenu in <code>Main Menu -&gt; Tools -&gt; Microconfig</code>and in editor's <code>RightClick</code> popup.
                 </p>
-                <p>Microconfig has two actions:</p>
+                <p>Microconfig Plugin's main functions:</p>
                 <ul>
                     <li>Jump to component (F10)</li>
                     <li>Resolve placeholder (Ctrl-F10 / Command-F10)</li>
+                    <li>Preview component (Shift-Ctrl-F10 / Shift-Command-F10)</li>
+                    <li>Build configuration (via Run Configuration)</li>
                 </ul>
-
                 <h4>Jump to component</h4>
                 <p><code>Jump to component</code> supports navigation from <code>#include component</code> line.
-                    Once chosen from the menu or on the hotkey press it will try to find <code>component</code> in
-                    'components' directory and open the corresponding file inside.
+                    Once activated from the menu or by a hotkey it will try to find <code>component</code> in
+                    'components' directory and open matching file inside.
                 </p>
-                <p>Also it can jump to a component referenced in a placeholder like <code>${component@key}</code>.
+                <p>Also, it can jump to a component referenced in a placeholder like <code>${component@key}</code>.
                     To choose a placeholder just place your cursor inside <code>{}</code>.
                     On Jump it will try to find <code>component</code> file and then a line with <code>key</code> inside
-                    it. Once found it will open that file and place cursor on <code>key</code> line.
+                    it, once found it will place cursor on that line.
                 </p>
 
                 <h4>Resolve placeholder</h4>
-                <p><code>Resolve placeholder</code> supports two modes.</p>
+                <p><code>Resolve placeholder</code> shows value previews grouped by env names in a small hint.</p>
                 <p>If activated with cursor on a property' key it will try to resolve the whole property and show values
                     grouped by env names in a small hint.
                 </p>
-                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve.png"
-                        alt="resolve" style="max-width:100%;">
-                </p>
-                <p>If activated with cursor inside placeholder <code>${}</code> it will try to resolve only that
-                    placeholder.
-                </p>
-                <h4>Config build</h4>
-                <p>You can create standard IDEA Run configuration for Microconfig to build configs with plugin.</p>
-                <p>
-                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/run.png" alt="run"
-                         style="max-width:100%;">
-                </p>
+                <p>If activated with cursor inside placeholder <code>${}</code> it will try to resolve only selected placeholder.</p>
+                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-placeholder.png"
+                        alt="resolve-placeholder" style="max-width:100%;"></p>
+
+                <p>If activated with cursor on a property key it will try to resolve the whole property.</p>
+                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-property.png"
+                        alt="resolve-property" style="max-width:100%;"></p>
+
+                <p>It also works with expression language.</p>
+                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/resolve-expression.png"
+                        alt="resolve-expression" style="max-width:100%;"></p>
 
                 <h4>Configuration preview</h4>
                 <p>You can preview configuration for a component on the fly. To open preview either activate <code>
@@ -132,13 +131,26 @@
                     Shift-Command-F10).
                     Preview window allows you to see resulting configs for different environments.
                 </p>
-                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/preview_light.png"
+                <p><img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/preview.png"
                         alt="preview" style="max-width:100%;"></p>
+
+
+                <h4>Config build</h4>
+                <p>You can create standard IDEA Run configuration for Microconfig to build configs with your IDE.</p>
+                <p>
+                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/run.png" alt="run"
+                         style="max-width:100%;">
+                </p>
 
                 <h4>Installation</h4>
                 <p>
                     Install plugin by name <code>Microconfig.io</code> from Idea <code>Settings -&gt; Plugins -&gt;
                     Marketplace</code>
+                </p>
+
+                <p>
+                    <img src="https://github.com/microconfig/microconfig-idea-plugin/raw/master/doc/install.png" alt="install"
+                         style="max-width:100%;">
                 </p>
                 <p>Or download plugin zip file from
                     <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io" rel="nofollow">Jetbrains Plugin repository</a>
